--- a/helm_charts/sunbird-rc/charts/certificateapi/templates/ingress.yaml
+++ b/helm_charts/sunbird-rc/charts/certificateapi/templates/ingress.yaml
@@ -8,8 +8,10 @@ metadata:
   namespace: {{ .Values.namespace }}
   labels:
     app: {{ .Chart.Name }}
+{{- with .Values.ingress.annotations }}
   annotations:
-{{ toYaml .Values.ingress.annotations | indent 4 }}
+{{ toYaml . | indent 4 }}
+{{- end }}
 spec:
 {{- if .Values.ingress.tls }}
   tls:
