--- a/helm_charts/sunbird-rc/charts/certificateapi/templates/ingress.yaml
+++ b/helm_charts/sunbird-rc/charts/certificateapi/templates/ingress.yaml
@@ -1,5 +1,4 @@
 {{- if .Values.ingress.enabled -}}
-{{- $sericeName := test -}}
 {{- $servicePort := .Values.network.port -}}
 {{- $ingressPath := .Values.ingress.path -}}
 apiVersion: networking.k8s.io/v1
@@ -31,7 +30,7 @@ spec:
         paths:
           - path: {{ $ingressPath }}
             backend:
-              serviceName: {{ $sericeName }}
+              serviceName: xyz
               servicePort: {{ $servicePort }}
   {{- end }}
 {{- end }}
