--- a/helm_charts/sunbird-rc/charts/certificateapi/templates/ingress.yaml
+++ b/helm_charts/sunbird-rc/charts/certificateapi/templates/ingress.yaml
@@ -29,8 +29,11 @@ spec:
       http:
         paths:
           - path: {{ $ingressPath }}
+            pathType: Prefix
             backend:
-              serviceName: xyz
-              servicePort: {{ $servicePort }}
+              service:
+                name: {{ .Chart.Name }}
+                port: 
+                  number: {{ $servicePort }}
   {{- end }}
 {{- end }}
