--- a/helm_charts/sunbird-rc/charts/claim-ms/values.yaml
+++ b/helm_charts/sunbird-rc/charts/claim-ms/values.yaml
@@ -26,6 +26,19 @@ autoscaling:
   targetCPUUtilizationPercentage: 60
   targetMemoryUtilizationPercentage: ''
 
+ingress:
+  enabled: false
+  annotations: {}
+    # kubernetes.io/ingress.class: nginx
+    # kubernetes.io/tls-acme: "true"
+  path: /claim-ms
+  hosts:
+    - chart-example.local
+  tls: []
+  #  - secretName: chart-example-tls
+  #    hosts:
+  #      - chart-example.local
+
 claim_msenv:
   connectionInfo_uri: ''
   connectionInfo_username: ''
