--- a/private_repo/ansible/inv/dev/Core/secrets.yml
+++ b/private_repo/ansible/inv/dev/Core/secrets.yml
@@ -74,7 +74,10 @@ sunbird_rc:
 ingress_enabled: 
   certificateapi: true
   
-
+ingress_service_annotations: 
+  kubernetes.io/ingress.class: nginx
+  kubernetes.io/tls-acme: "true"
+  
 filestorage:
   minio_root_user: admin
   minio_root_password: admin1234
