added ingress for keycloak
Signed-off-by: Deepak Devadathan <deepak.devadathan@oracle.com>

--- a/helm_charts/sunbird-rc/charts/filestorage/values.yaml
+++ b/helm_charts/sunbird-rc/charts/filestorage/values.yaml
@@ -28,6 +28,15 @@ autoscaling:
   targetCPUUtilizationPercentage: 60
   targetMemoryUtilizationPercentage: ''
 
+ingress:
+  enabled: false
+  annotations: {}
+  path: /bucket
+  hosts:
+    - chart-example.local
+  tls: []
+
+
 filestorageenv:
   MINIO_ROOT_USER: admin
   MINIO_ROOT_PASSWORD: admin1234
