--- a/private_repo/ansible/inv/dev/Core/secrets.yml
+++ b/private_repo/ansible/inv/dev/Core/secrets.yml
@@ -72,7 +72,10 @@ sunbird_rc:
   registry_enabled: false
 
 ingress_enabled: 
-  certificateapi: true
+  claim_ms: true
+  filestorage: true
+  registry: true
+  keycloak: true
   
 ingress_service_annotations: 
   kubernetes.io/ingress.class: nginx
