added ingress definitions
Signed-off-by: Deepak Devadathan <deepak.devadathan@oracle.com>

--- a/helm_charts/sunbird-rc/charts/registry/values.yaml
+++ b/helm_charts/sunbird-rc/charts/registry/values.yaml
@@ -26,6 +26,14 @@ autoscaling:
   targetCPUUtilizationPercentage: 60
   targetMemoryUtilizationPercentage: ''
 
+ingress:
+  enabled: false
+  annotations: {}
+  path: /registry
+  hosts:
+    - chart-example.local
+  tls: []
+
 rccoreenv:
   connectionInfo_uri: 'jdbc:postgresql://postgres:5432/registry'
   connectionInfo_username: 'postgres'
