--- a/helm_charts/nginx-ingress/templates/configMap.yaml
+++ b/helm_charts/nginx-ingress/templates/configMap.yaml
@@ -5,7 +5,7 @@ metadata:
   name: proxy-default
   namespace: {{ .Values.namespace }}
 data:
-{{ tpl (.Files.Glob "proxy-default.conf compression.conf").AsConfig .| indent 2 }}
+{{ tpl (.Files.Glob "config/proxy-default.conf config/compression.conf").AsConfig .| indent 2 }}
 
 ---
 apiVersion: v1
@@ -14,4 +14,4 @@ metadata:
   name: nginx-conf
   namespace: {{ .Values.namespace }}
 data:
-{{ tpl (.Files.Glob "nginx.conf").AsConfig .| indent 2 }}
+{{ tpl (.Files.Glob "config/nginx.conf").AsConfig .| indent 2 }}
