--- a/helm_charts/nginx-ingress/templates/configMap.yaml
+++ b/helm_charts/nginx-ingress/templates/configMap.yaml
@@ -6,7 +6,7 @@ metadata:
   namespace: {{ .Values.namespace }}
 data:
   proxy-default.conf: |-
-{{ tpl (.Files.Glob "config/proxy-default.conf") .| indent 4}}
+{{ tpl (.Files.Glob "config/proxy-default.conf").AsConfig .| indent 4}}
 
 ---
 apiVersion: v1
