--- a/helm_charts/nginx-ingress/config/nginx.conf
+++ b/helm_charts/nginx-ingress/config/nginx.conf
@@ -1,2 +1,9 @@
   user  nginx;
-  
+  worker_processes  {{nginx_worker_processes | d("auto")}};
+  {#
+  Can add custom modules like
+  eg:
+  nginx_modules: |
+      load_module modules/ngx_http_geoip2_module.so;
+      load_module modules/ngx_stream_geoip2_module.so;
+  #}
