--- a/helm_charts/nginx-ingress/config/nginx.conf
+++ b/helm_charts/nginx-ingress/config/nginx.conf
@@ -1,5 +1,5 @@
   user  nginx;
-  worker_processes  {{nginx_worker_processes | d("auto")}};
+  worker_processes  {{ .Values.nginx_worker_processes }};
   {#
   Can add custom modules like
   eg:
