--- a/helm_charts/nginx-ingress/config/nginx.conf
+++ b/helm_charts/nginx-ingress/config/nginx.conf
@@ -1,5 +1,5 @@
   user  nginx;
-  worker_processes  {{ .Values.nginx_worker_processes }};
+  worker_processes  {{nginx_worker_processes | d("auto")}};
   {#
   Can add custom modules like
   eg:
@@ -7,3 +7,9 @@
       load_module modules/ngx_http_geoip2_module.so;
       load_module modules/ngx_stream_geoip2_module.so;
   #}
+{% if nginx_modules is defined and nginx_modules %}
+  {{ nginx_modules | indent( width=2, indentfirst=True)  }}
+{% endif %}
+  error_log  /var/log/nginx/error.log warn;
+  pid        /var/run/nginx.pid;
+
