--- a/helm_charts/nginx-public-ingress/templates/configMap.yaml
+++ b/helm_charts/nginx-public-ingress/templates/configMap.yaml
@@ -1,12 +1,13 @@
----
 apiVersion: v1
 kind: ConfigMap
 metadata:
   name: proxy-default
   namespace: {{ .Values.namespace }}
 data:
-{{ (.Files.Glob "config/compression.conf").AsConfig | indent 2 }}
-{{ (.Files.Glob "config/proxy-default.conf").AsConfig | indent 2 }}
+  proxy-default.conf: |
+{{ .Values.proxyconfig | indent 4 }}
+  compression.conf: |
+{{ .Values.compressionConfig | indent 4 }}
 
 ---
 apiVersion: v1
@@ -15,4 +16,6 @@ metadata:
   name: nginx-conf
   namespace: {{ .Values.namespace }}
 data:
-{{ (.Files.Glob "config/nginx.conf").AsConfig | indent 2 }}
+  nginx.conf: |
+{{ .Values.nginxconfig | indent 4 }}
+
