--- a/helm_charts/nginx-ingress/Chart.yaml
+++ b/helm_charts/nginx-ingress/Chart.yaml
@@ -1,5 +1,5 @@
 apiVersion: v2
-name: nginx-public-ingress
+name: nginx-ingress
 description: A Helm chart for Kubernetes
 
 # A chart can be either an 'application' or a 'library' chart.
