--- a/private_repo/ansible/inv/dev/Core/secrets.yml
+++ b/private_repo/ansible/inv/dev/Core/secrets.yml
@@ -77,3 +77,8 @@ filestorage:
   minio_root_password: admin1234
 
 admin_api_secret: "change.my.password"
+
+nginx_ingress_service_annotations:
+  service.beta.kubernetes.io/oci-load-balancer-shape: "flexible"
+  service.beta.kubernetes.io/oci-load-balancer-internal: "true"
+  service.beta.kubernetes.io/oci-load-balancer-subnet1: "ocid1.subnet.oc1.ap-mumbai-1.aaaaaaaa"
