--- a/ansible/deploy_core_service.yml
+++ b/ansible/deploy_core_service.yml
@@ -8,4 +8,7 @@
     OCI_CLI_AUTH: instance_principal
   roles:
     - "{{ role_name }}"
-
+      vars:
+        chart_path: "../helm_charts/{{item}}"
+        release_name: "{{item}}"
+      with_items: "{{ service_list }}"
