--- a/private_repo/ansible/inv/dev/Core/secrets.yml
+++ b/private_repo/ansible/inv/dev/Core/secrets.yml
@@ -82,3 +82,7 @@ nginx_ingress_service_annotations:
   service.beta.kubernetes.io/oci-load-balancer-shape: "flexible"
   service.beta.kubernetes.io/oci-load-balancer-internal: "true"
   service.beta.kubernetes.io/oci-load-balancer-subnet1: "ocid1.subnet.oc1.ap-mumbai-1.aaaaaaaa"
+
+service_list:
+  - ceritificateapi
+  - certificatesign 
