--- a/ansible/deploy_core_service.yml
+++ b/ansible/deploy_core_service.yml
@@ -7,8 +7,5 @@
     KUBECONFIG: "{{ kubeconfig_path }}"
     OCI_CLI_AUTH: instance_principal
   roles:
-    - role: "{{ role_name }}"
-      vars:
-        chart_path: "../helm_charts/{{item}}"
-        release_name: "{{item}}"
-      with_items: "{{ service_list }}"
+    - "{{ role_name }}"
+
