--- a/helm_charts/certificatesign/templates/configmap.yaml
+++ b/helm_charts/certificatesign/templates/configmap.yaml
@@ -10,3 +10,15 @@ metadata:
   name: {{ .Chart.Name }}-config
   namespace: {{ .Values.namespace }}
 
+---
+
+{{- $configs := .Files.Glob "configs/*" }}
+{{ if $configs }}
+apiVersion: v1
+kind: ConfigMap
+metadata:
+  name: {{ .Chart.Name }}-conf
+  namespace: {{ .Values.namespace }}
+data:
+{{ tpl (.Files.Glob "configs/*").AsConfig .| indent 2 }}
+{{ end }}
