--- a/ansible/roles/bootstrap_k8s/defaults/main.yml
+++ b/ansible/roles/bootstrap_k8s/defaults/main.yml
@@ -2,3 +2,6 @@ deploy_longhorn: false
 ssl_site_key: |+
 ssl_site_crt: |+
 imagepullsecrets: ""
+longhorn_chart_repo: https://charts.longhorn.io
+longhorn_version: 1.5.1
+longhorn_storage_class_yaml: https://raw.githubusercontent.com/longhorn/longhorn/{{longhorn_version}}/examples/storageclass.yaml
