--- a/ansible/roles/bootstrap_k8s/tasks/main.yml
+++ b/ansible/roles/bootstrap_k8s/tasks/main.yml
@@ -15,6 +15,7 @@
     - "{{ bootstrap_namespace.split(',') }}"
     - monitoring
     - logging
+    - longhorn-system
   ignore_errors: yes
 
 - name: Creating docker secrets
@@ -59,5 +60,5 @@
   shell: helm repo update
 
 - name: helm install longhorn
-  shell: helm upgrade --install --atomic --timeout {{helm_install_timeout | d("10m")}} longhorn longhorn/longhorn -n longhorn-system --create-namespace  --version {{longhorn_version}} --values /tmp/longhorn.yaml --wait
+  shell: helm upgrade --install --atomic --timeout {{helm_install_timeout | d("10m")}} longhorn longhorn/longhorn -n longhorn-system  --version {{longhorn_version}} --values /tmp/longhorn.yaml --wait
 
