--- a/ansible/roles/bootstrap_k8s/tasks/main.yml
+++ b/ansible/roles/bootstrap_k8s/tasks/main.yml
@@ -55,6 +55,8 @@
 - name: add longhorn helm repo
   shell: helm repo add longhorn {{longhorn_chart_repo}}
 
+- name: add cloudnative postgres helm repo
+  shell: helm repo add cnpg {{cloud_native_pg_chart_repo}}
 
 - name: update repo
   shell: helm repo update
@@ -62,3 +64,5 @@
 - name: helm install longhorn
   shell: helm upgrade --install --atomic --timeout {{helm_install_timeout | d("10m")}} longhorn longhorn/longhorn -n longhorn-system  --version {{longhorn_version}} --values /tmp/longhorn.yaml --wait
 
+- name: helm install cloudnative_pg
+  shell: helm upgrade --install --atomic --timeout {{helm_install_timeout | d("10m")}} cnpg charts/cloudnative-pg --namespace cnpg-system --create-namespace  --wait
