--- a/private_repo/ansible/inv/dev/Core/secrets.yml
+++ b/private_repo/ansible/inv/dev/Core/secrets.yml
@@ -3,6 +3,8 @@ namespace: "{{ env }}"
 bootstrap_namespace: "{{ namespace }}"
 kubeconfig_path: /home/ubuntu/secrets/k8s.yaml
 domain_name: demo.sunbirdrc.app.oci
+oci_tenancy_ocid: ""
+region: ""
 
 core_vault_dp_pgdb_password: "postgres"
 core_vault_postgres_password: "postgres"
