--- a/deploy/oci-provisioning.yaml
+++ b/deploy/oci-provisioning.yaml
@@ -1,6 +1,12 @@
-- name: Check pre-requisites
-  fail:
-    msg: "Environment variable {{item}} not set. Please declare an environment variable with an appropriate value for the sample to work."
-  when: item not in ansible_env
-  with_items:
-    - "SAMPLE_COMPARTMENT_OCID"
+---
+- name: Create Network
+  collections: 
+    - oracle.oci
+  hosts: localhost
+  tasks: 
+  - name: Check pre-requisites
+    fail:
+      msg: "Environment variable {{item}} not set. Please declare an environment variable with an appropriate value for the sample to work."
+    when: item not in ansible_env
+    with_items:
+      - "SAMPLE_COMPARTMENT_OCID"
