--- a/deploy/oci-provisioning.yaml
+++ b/deploy/oci-provisioning.yaml
@@ -3,6 +3,11 @@
   collections: 
     - oracle.oci
   hosts: localhost
+  vars:
+    vcn_cidr_block: "10.0.0.0/16"
+    vcn_name: "sunbird-vcn"
+    vcn_dns_label: "sunbirdvcn"
+    compartment_id: "{{ lookup('env', 'SAMPLE_COMPARTMENT_OCID') }}"
   tasks: 
   - name: Check pre-requisites
     fail:
@@ -10,3 +15,14 @@
     when: item not in ansible_env
     with_items:
       - "SAMPLE_COMPARTMENT_OCID"
+
+- name: Create a VCN
+  oci_network_vcn:
+    compartment_id: "{{ compartment_id }}"
+    display_name: "{{ vcn_name }}"
+    cidr_block: "{{ vcn_cidr_block }}"
+    dns_label: "{{ vcn_dns_label }}"
+  register: result
+- set_fact:
+    vcn_id: "{{ result.vcn.id }}"
+    vcn: "{{ result.vcn }}"
