testing set fct
Signed-off-by: Deepak Devadathan <deepak.devadathan@oracle.com>

--- a/deploy/oci-provisioning.yaml
+++ b/deploy/oci-provisioning.yaml
@@ -25,3 +25,7 @@
     register: result
     tags:
       - network
+  - set_fact:
+      vcn_id: "{{ result.vcn.id }}"
+      vcn: "{{ result.vcn }}"
+      cacheable: yes
