--- a/deploy/oci-provisioning.yaml
+++ b/deploy/oci-provisioning.yaml
@@ -8,6 +8,8 @@
     vcn_name: "sunbird-vcn"
     vcn_dns_label: "sunbirdvcn"
     compartment_id: "{{ lookup('env', 'SAMPLE_COMPARTMENT_OCID') }}"
+    quad_zero_route: "0.0.0.0/0"
+
   tasks: 
   - name: Check pre-requisites
     fail:
@@ -58,5 +60,24 @@
 
   - set_fact:
       ig_id: "{{ result.internet_gateway.id }}"
+      route_table_rules:
+        - cidr_block: "{{ quad_zero_route }}"
+          network_entity_id: "{{ ig_id }}"
+    tags:
+      - network
+
+  - name: Create route table to connect internet gateway to the VCN
+    oci_network_route_table:
+      compartment_id: "{{ compartment_id }}"
+      vcn_id: "{{ vcn_id }}"
+      name: "public route table"
+      route_rules: "{{ route_table_rules }}"
+      state: 'present'
+    register: result
+    tags:
+      - network
+
+  - set_fact:
+      rt_id: "{{ result.route_table.id }}"
     tags:
       - network
