--- a/deploy/oci-provisioning.yaml
+++ b/deploy/oci-provisioning.yaml
@@ -8,7 +8,7 @@
     vlan_cidr_block: "10.90.1.0/24"
     vcn_name: "SunbirdEd-VCN"
     vcn_dns_label: "sunbirded"
-    compartment_id: "{{ lookup('env', 'SAMPLE_COMPARTMENT_OCID') }}"
+    compartment_id: "{{ lookup('env', 'COMPARTMENT_OCID') }}"
     quad_zero_route: "0.0.0.0/0"
 
   tasks: 
@@ -17,7 +17,7 @@
       msg: "Environment variable {{item}} not set. Please declare an environment variable with an appropriate value for the sample to work."
     when: item not in ansible_env
     with_items:
-      - "SAMPLE_COMPARTMENT_OCID"
+      - "COMPARTMENT_OCID"
 
   - name: Create a VCN
     oci_network_vcn:
