--- a/deploy/oci-provisioning.yaml
+++ b/deploy/oci-provisioning.yaml
@@ -162,6 +162,10 @@
         protocol: "all"
         destination_type: CIDR_BLOCK
         is_stateless: false
+      - description: "Allow outgoing traffic to OCI services"
+        destination: "{{oci_all_service_id}}"
+        destination_type: SERVICE_CIDR_BLOCK
+        is_stateless: false
       ingress_security_rules:
       - description: "Allow kube api ep access from within the vcn"
         protocol: 6
