--- a/deploy/oci-provisioning.yaml
+++ b/deploy/oci-provisioning.yaml
@@ -311,7 +311,7 @@
       - network
       - k8s
   - set_fact:
-      vm_list_id: "{{ result.security_list.id }}"
+      lb_list_id: "{{ result.security_list.id }}"
       cacheable: yes
     tags:
       - network
@@ -344,6 +344,38 @@
         - "{{k8s_worker_list_id}}"
       dns_label: "k8sworker"
       prohibit_public_ip_on_vnic: yes
+      vcn_id: "{{ vcn_id }}"
+    register: result
+    tags:
+      - network
+      - k8s
+
+  - name: Create a Subnet for VM
+    oci_network_subnet:
+      cidr_block: "{{ k8s_vm_subnet_cidr_block }}"
+      compartment_id: "{{ compartment_id }}"
+      display_name: "VM-SN"
+      route_table_id: "{{ private_rt_id }}"
+      security_list_ids:
+        - "{{vm_list_id}}"
+      dns_label: "vm"
+      prohibit_public_ip_on_vnic: yes
+      vcn_id: "{{ vcn_id }}"
+    register: result
+    tags:
+      - network
+      - k8s
+
+  - name: Create a Subnet for LB
+    oci_network_subnet:
+      cidr_block: "{{ k8s_lb_subnet_cidr_block }}"
+      compartment_id: "{{ compartment_id }}"
+      display_name: "PB-LB-SN"
+      route_table_id: "{{ public_rt_id }}"
+      security_list_ids:
+        - "{{lb_list_id}}"
+      dns_label: "publb"
+      prohibit_public_ip_on_vnic: no
       vcn_id: "{{ vcn_id }}"
     register: result
     tags:
